kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipcode
  namespace: census
  labels:
    app: zipcode
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 1401
    targetPort: 1401
  selector:
    app: zipcode
