kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: zipcode-ingress
  namespace: census
spec:
  rules:
  - host: census.trevezani.com.br
    http:
      paths:
      - backend:
          serviceName: zipcode
          servicePort: 1401
        path: /
