kubernetes/kibana.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kibana-logging
  namespace: logging
  labels:
    app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana-logging
  template:
    metadata:
      labels:
        app: kibana-logging
    spec:
      containers:
      - name: kibana-logging
        image: docker.elastic.co/kibana/kibana:7.3.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana-logging
spec:
  type: LoadBalancer
  selector:
    app: kibana-logging
  ports:
  - name: http
    port: 5601
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: logging.trevezani.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
